--- a/notebooks/critical_heat_flux.ipynb
+++ b/notebooks/critical_heat_flux.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 160,
    "id": "9c9e13af-f1e1-457a-b111-52e8225279d8",
    "metadata": {},
    "outputs": [],
@@ -42,6 +42,8 @@
     "\n",
     "from scipy import stats\n",
     "from scipy.stats import f_oneway\n",
+    "\n",
+    "import pingouin as pg\n",
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -1332,6 +1334,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4ee49322-8014-4e16-ac7a-624195c0da7d",
+   "metadata": {},
+   "source": [
+    "### f_oneway"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 156,
    "id": "9a112aa3-977b-4f18-a339-a5f04d837c40",
@@ -1374,7 +1384,13 @@
    ],
    "source": [
     "# Define the numerical feature column names\n",
-    "num_features = ['pressure [MPa]', 'mass_flux [kg/m2-s]', 'x_e_out [-]', 'D_e [mm]', 'D_h [mm]', 'length [mm]', 'chf_exp [MW/m2]']\n",
+    "num_features = ['pressure [MPa]', \n",
+    "                'mass_flux [kg/m2-s]', \n",
+    "                'x_e_out [-]', \n",
+    "                'D_e [mm]', \n",
+    "                'D_h [mm]', \n",
+    "                'length [mm]', \n",
+    "                'chf_exp [MW/m2]']\n",
     "\n",
     "# Iterate over the numerical features\n",
     "for feature in num_features:\n",
@@ -1393,6 +1409,79 @@
     "    # Print the results\n",
     "    print(\"F-statistic:\", f_stat)\n",
     "    print(\"p-value:\", p_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70614e63-686f-4243-b0c2-9850eb23762b",
+   "metadata": {},
+   "source": [
+    "### pingouin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "5c518675-2a3c-488f-8804-8e77285221aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------\n",
+      "Feature: pressure [MPa]\n",
+      "     Source  ddof1  ddof2           F         p-unc       np2\n",
+      "0  geometry      2   1862  209.672684  7.502800e-83  0.183815\n",
+      "------\n",
+      "Feature: mass_flux [kg/m2-s]\n",
+      "     Source  ddof1  ddof2          F         p-unc       np2\n",
+      "0  geometry      2   1862  70.199638  4.049453e-30  0.070116\n",
+      "------\n",
+      "Feature: x_e_out [-]\n",
+      "     Source  ddof1  ddof2          F         p-unc       np2\n",
+      "0  geometry      2   1862  73.974948  1.217948e-31  0.073609\n",
+      "------\n",
+      "Feature: D_e [mm]\n",
+      "     Source  ddof1  ddof2          F         p-unc      np2\n",
+      "0  geometry      2   1862  19.990077  2.572234e-09  0.02102\n",
+      "------\n",
+      "Feature: D_h [mm]\n",
+      "     Source  ddof1  ddof2           F  p-unc       np2\n",
+      "0  geometry      2   1862  3356.52141    0.0  0.782858\n",
+      "------\n",
+      "Feature: length [mm]\n",
+      "     Source  ddof1  ddof2           F          p-unc       np2\n",
+      "0  geometry      2   1862  724.872027  1.507407e-233  0.437758\n",
+      "------\n",
+      "Feature: chf_exp [MW/m2]\n",
+      "     Source  ddof1  ddof2           F         p-unc       np2\n",
+      "0  geometry      2   1862  110.836176  3.318032e-46  0.106385\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the numerical feature column names\n",
+    "num_features = ['pressure [MPa]', \n",
+    "                'mass_flux [kg/m2-s]', \n",
+    "                'x_e_out [-]', \n",
+    "                'D_e [mm]', \n",
+    "                'D_h [mm]', \n",
+    "                'length [mm]', \n",
+    "                'chf_exp [MW/m2]']\n",
+    "\n",
+    "# Perform the ANOVA test for each feature\n",
+    "for feature in num_features:\n",
+    "    print(\"------\")\n",
+    "    print(\"Feature:\", feature)\n",
+    "\n",
+    "    # Perform the ANOVA test\n",
+    "    anova_result = pg.anova(data=orig_data, \n",
+    "                            dv=feature, \n",
+    "                            between='geometry')\n",
+    "\n",
+    "    # Print the ANOVA summary\n",
+    "    print(anova_result)"
    ]
   }
  ],
