--- a/notebooks/critical_heat_flux.ipynb
+++ b/notebooks/critical_heat_flux.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 166,
    "id": "6d6bd88d-0d39-49ec-b263-b18bb45e5749",
    "metadata": {},
    "outputs": [],
@@ -624,7 +624,7 @@
    "id": "b89208a9-dceb-4eab-891c-6e434c891e7f",
    "metadata": {},
    "source": [
-    "# Exploratory Data Analysis"
+    "# EDA - Exploratory Data Analysis"
    ]
   },
   {
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 167,
    "id": "c92bce8f-5a74-4e8b-a01d-b768ac5b7548",
    "metadata": {},
    "outputs": [
@@ -889,7 +889,7 @@
     "tags": []
    },
    "source": [
-    "## Features Boxplots based on geometry category"
+    "## Boxplots vs Geometry"
    ]
   },
   {
@@ -1020,7 +1020,7 @@
    "id": "95e857d9-763e-44ca-9757-ff20b3d2f571",
    "metadata": {},
    "source": [
-    "## Label Boxplos based on 'geometry'"
+    "## Boxplots Label vs Geometry"
    ]
   },
   {
@@ -1482,6 +1482,63 @@
     "\n",
     "    # Print the ANOVA summary\n",
     "    print(anova_result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7eab0c9d-ee40-43cc-8e90-21d15fbc99e3",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67a26bca-c7e4-49b6-855c-9136b2445216",
+   "metadata": {},
+   "source": [
+    "# Preprocessing Data Before Modeling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07d5a8b9-2a27-492d-b960-52371dfaa993",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_engineered_features(data: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Create engineered features to have the dataset model-ready\n",
+    "    \n",
+    "    Args:\n",
+    "        data Pandas.DataFrame input\n",
+    "    \n",
+    "    Returns:\n",
+    "        data Pandas.DataFrame with engineered features\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Create engineered features\n",
+    "    \n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b51449ad-9117-4168-aad2-d0019b3d6fba",
+   "metadata": {},
+   "source": [
+    "# Model Training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dba29d65-13e4-4041-b904-32310d38854a",
+   "metadata": {},
+   "source": [
+    "# Model Diagnostic"
    ]
   }
  ],
