--- a/notebooks/critical_heat_flux.ipynb
+++ b/notebooks/critical_heat_flux.ipynb
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 214,
    "id": "061c3f19-b5d0-4b40-a4fd-4fcf7aac8dfc",
    "metadata": {},
    "outputs": [
@@ -1310,10 +1310,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "id": "9a112aa3-977b-4f18-a339-a5f04d837c40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------\n",
+      "Feature: pressure [MPa]\n",
+      "F-statistic: 209.6726838787339\n",
+      "p-value: 7.502800471101501e-83\n",
+      "------\n",
+      "Feature: mass_flux [kg/m2-s]\n",
+      "F-statistic: 70.19963789844027\n",
+      "p-value: 4.0494525501755815e-30\n",
+      "------\n",
+      "Feature: x_e_out [-]\n",
+      "F-statistic: 73.97494750844729\n",
+      "p-value: 1.217947747799208e-31\n",
+      "------\n",
+      "Feature: D_e [mm]\n",
+      "F-statistic: 19.990077259693255\n",
+      "p-value: 2.5722342082769694e-09\n",
+      "------\n",
+      "Feature: D_h [mm]\n",
+      "F-statistic: 3356.5214097926755\n",
+      "p-value: 0.0\n",
+      "------\n",
+      "Feature: length [mm]\n",
+      "F-statistic: 724.8720267390352\n",
+      "p-value: 1.50740718469071e-233\n",
+      "------\n",
+      "Feature: chf_exp [MW/m2]\n",
+      "F-statistic: 110.8361755769167\n",
+      "p-value: 3.3180319920757e-46\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the numerical feature column names\n",
     "num_features = ['pressure [MPa]', \n",
@@ -1353,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 207,
    "id": "5c518675-2a3c-488f-8804-8e77285221aa",
    "metadata": {},
    "outputs": [
