--- a/notebooks/critical_heat_flux.ipynb
+++ b/notebooks/critical_heat_flux.ipynb
@@ -1470,6 +1470,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 217,
+   "id": "4b268f4b-30bd-4cc3-8c45-cd51929edb7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['author', 'geometry', 'pressure [MPa]', 'mass_flux [kg/m2-s]',\n",
+       "       'x_e_out [-]', 'D_e [mm]', 'D_h [mm]', 'length [mm]',\n",
+       "       'chf_exp [MW/m2]'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orig_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "07d5a8b9-2a27-492d-b960-52371dfaa993",
    "metadata": {},
@@ -1488,6 +1512,13 @@
     "    \"\"\"\n",
     "    \n",
     "    # Create engineered features\n",
+    "    data['D_h [mm] per D_e [mm]'] = data['D_h [mm]'] * data['D_e [mm]']\n",
+    "    \n",
+    "    data['D_h [mm] per length [mm]'] = data['D_h [mm]'] * data['lenght [mm]']\n",
+    "    \n",
+    "    data['pressure [MPa] per D_h [mm]'] =  data['pressure [MPa]'] * data['D_h [mm]']\n",
+    "    \n",
+    "    data['pressure [MPa] per D_e [mm]'] =  data['pressure [MPa]'] * data['D_e [mm]']\n",
     "    \n",
     "    return data"
    ]
