--- a/notebooks/critical_heat_flux.ipynb
+++ b/notebooks/critical_heat_flux.ipynb
@@ -1281,6 +1281,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a739b04-8784-45a8-b054-fb597953cdf3",
+   "metadata": {},
+   "source": [
+    "## Praiplot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "id": "98960208-a8fd-4f08-8ca8-0b30556f115d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['author', 'geometry', 'pressure [MPa]', 'mass_flux [kg/m2-s]',\n",
+       "       'x_e_out [-]', 'D_e [mm]', 'D_h [mm]', 'length [mm]',\n",
+       "       'chf_exp [MW/m2]'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orig_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e187699b-7e08-4045-8240-8a5942f1ba9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.pairplot(orig_data[['pressure [MPa]', \n",
+    "                       'mass_flux [kg/m2-s]',\n",
+    "                       'x_e_out [-]', \n",
+    "                       'D_e [mm]', \n",
+    "                       'D_h [mm]', \n",
+    "                       'length [mm]',\n",
+    "                       'chf_exp [MW/m2]']],\n",
+    "             kind=\"reg\",\n",
+    "             diag_kind='kde',\n",
+    "             plot_kws={'line_kws':{'color':'red'}},\n",
+    "             corner=True)\n",
+    "\n",
+    "plt.suptitle('Features and Target Pairplots', \n",
+    "             fontsize=20, \n",
+    "             fontweight='bold')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "82500979-96f9-46da-9110-1712507a0094",
