--- a/notebooks/critical_heat_flux.ipynb
+++ b/notebooks/critical_heat_flux.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 279,
    "id": "9c9e13af-f1e1-457a-b111-52e8225279d8",
    "metadata": {},
    "outputs": [],
@@ -45,6 +45,9 @@
     "\n",
     "import pingouin as pg\n",
     "\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.impute import KNNImputer\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
@@ -1237,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 262,
    "id": "cde07b0d-7fde-49bb-ba79-cc6a1357f1ef",
    "metadata": {},
    "outputs": [
@@ -1532,8 +1535,27 @@
    "id": "7eab0c9d-ee40-43cc-8e90-21d15fbc99e3",
    "metadata": {},
    "source": [
-    "## Conclusion\n",
-    "\n"
+    "## Conclusions\n",
+    "\n",
+    "- All the sets (train and test set split by me from the challenge dataset and the original dataset) looks to have comparable feature distribution\n",
+    "- Train and test set have both 15% and 20% of missing values in every feature while the original dataset has none\n",
+    "- I will discard 'author' feature in models\n",
+    "- The difference between Pearson and Spearman Correlation values suggests that some features have a non-linear relationship\n",
+    "- The results of ANOVA tests suggest there are significant differences in every features and in the label across the 'geometry' categories\n",
+    "- The pairplots splitted by 'geometry' feature suggests that the correlations between feature change across 'geometry' (somethimes they even change direction)\n",
+    "\n",
+    "### Whats nexts:\n",
+    "\n",
+    "- Compute engineered feature to enhance the correlation between features \n",
+    "    - 'D_h [mm] per D_e [mm]' \n",
+    "    - 'D_h [mm] per length [mm]'\n",
+    "    - 'pressure [MPa] per D_h [mm]'\n",
+    "    - 'pressure [MPa] per D_e [mm]'\n",
+    "- Concatenate train set and original set\n",
+    "- Imputing missing values in every feature\n",
+    "- Log-transform numerical features\n",
+    "- Scale numerical features\n",
+    "- Divide test data in 3 different dataset to fit a different model for every 'geometry'"
    ]
   },
   {
@@ -1545,32 +1567,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 217,
-   "id": "4b268f4b-30bd-4cc3-8c45-cd51929edb7c",
+   "cell_type": "markdown",
+   "id": "a02fdb53-288e-492f-9163-c90790e7b966",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['author', 'geometry', 'pressure [MPa]', 'mass_flux [kg/m2-s]',\n",
-       "       'x_e_out [-]', 'D_e [mm]', 'D_h [mm]', 'length [mm]',\n",
-       "       'chf_exp [MW/m2]'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 217,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "orig_data.columns"
+    "## Feature Engineering"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 235,
    "id": "07d5a8b9-2a27-492d-b960-52371dfaa993",
    "metadata": {},
    "outputs": [],
@@ -1590,13 +1596,152 @@
     "    # Create engineered features\n",
     "    data['D_h [mm] per D_e [mm]'] = data['D_h [mm]'] * data['D_e [mm]']\n",
     "    \n",
-    "    data['D_h [mm] per length [mm]'] = data['D_h [mm]'] * data['lenght [mm]']\n",
+    "    data['D_h [mm] per length [mm]'] = data['D_h [mm]'] * data['length [mm]']\n",
     "    \n",
     "    data['pressure [MPa] per D_h [mm]'] =  data['pressure [MPa]'] * data['D_h [mm]']\n",
     "    \n",
     "    data['pressure [MPa] per D_e [mm]'] =  data['pressure [MPa]'] * data['D_e [mm]']\n",
     "    \n",
     "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "id": "8adc3029-e016-448d-8d1b-fdfff47c43e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Engineering features in train data\n",
+    "train_data = compute_engineered_features(train_data.copy())\n",
+    "\n",
+    "# Engineering features in original data\n",
+    "orig_data = compute_engineered_features(orig_data.copy())\n",
+    "\n",
+    "# Engineering features in test data\n",
+    "test_data = compute_engineered_features(test_data.copy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d89e310-7192-41b7-a6a4-be08c43f085a",
+   "metadata": {},
+   "source": [
+    "## Concatenate train_data and orig_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "id": "08251ff2-45a1-4a77-abb3-0143105df3ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_train_data = pd.concat([train_data, orig_data], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02c11f52-ddd6-4067-ad48-36a9463cb10d",
+   "metadata": {},
+   "source": [
+    "## Defining Features and Label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "id": "b4b9d55b-1ff7-4ad1-9b05-42673d24ecf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numerical_features = ['pressure [MPa]',\n",
+    "                      'mass_flux [kg/m2-s]',\n",
+    "                      'D_e [mm]', \n",
+    "                      'D_h [mm]', \n",
+    "                      'length [mm]', \n",
+    "                      'chf_exp [MW/m2]',\n",
+    "                      'D_h [mm] per D_e [mm]', \n",
+    "                      'D_h [mm] per length [mm]',\n",
+    "                      'pressure [MPa] per D_h [mm]', \n",
+    "                      'pressure [MPa] per D_e [mm]']\n",
+    "\n",
+    "categorical_features = ['geometry']\n",
+    "\n",
+    "label = ['x_e_out [-]']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6d6ac99-590a-40ff-a1a1-1f4b92ce1d5a",
+   "metadata": {},
+   "source": [
+    "## Feature imputation on numerical features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "id": "2cfbe19f-86e3-495c-844f-2a7f3fd7fa12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate the imputer using the meadian (skewed features)\n",
+    "simpleimputer = SimpleImputer(strategy='median', missing_values=np.nan)\n",
+    "\n",
+    "# Fit the imputer \n",
+    "simpleimputer = simpleimputer.fit(full_train_data[numerical_features])\n",
+    "\n",
+    "# Impute numerical features in train set\n",
+    "full_train_data[numerical_features] = simpleimputer.transform(full_train_data[numerical_features])\n",
+    "\n",
+    "# Impute categorical features in test set\n",
+    "test_data[numerical_features] = simpleimputer.transform(test_data[numerical_features])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0e27f35-970f-46bc-be24-8747e6859734",
+   "metadata": {},
+   "source": [
+    "## Feature imputation on categorical feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "id": "b7bdf1b2-d07c-4e01-8126-ffda81ff39c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: 'tube'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [278], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m knnimputer \u001b[38;5;241m=\u001b[39m KNNImputer(n_neighbors\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m, missing_values\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mnan)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Fit the imputer \u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m knnimputer \u001b[38;5;241m=\u001b[39m \u001b[43mknnimputer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfull_train_data\u001b[49m\u001b[43m[\u001b[49m\u001b[43mcategorical_features\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Impute numerical features in train set\u001b[39;00m\n\u001b[0;32m      8\u001b[0m full_train_data[categorical_features] \u001b[38;5;241m=\u001b[39m knnimputer\u001b[38;5;241m.\u001b[39mtransform(full_train_data[categorical_features])\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\impute\\_knn.py:226\u001b[0m, in \u001b[0;36mKNNImputer.fit\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m    223\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    224\u001b[0m     force_all_finite \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mallow-nan\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m--> 226\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_validate_data\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    227\u001b[0m \u001b[43m    \u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    228\u001b[0m \u001b[43m    \u001b[49m\u001b[43maccept_sparse\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    229\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mFLOAT_DTYPES\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    230\u001b[0m \u001b[43m    \u001b[49m\u001b[43mforce_all_finite\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mforce_all_finite\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    231\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    232\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    234\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_fit_X \u001b[38;5;241m=\u001b[39m X\n\u001b[0;32m    235\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_mask_fit_X \u001b[38;5;241m=\u001b[39m _get_mask(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_fit_X, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmissing_values)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\base.py:565\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[1;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[0;32m    563\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mValidation should be done on X, y or both.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    564\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m no_val_X \u001b[38;5;129;01mand\u001b[39;00m no_val_y:\n\u001b[1;32m--> 565\u001b[0m     X \u001b[38;5;241m=\u001b[39m check_array(X, input_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mX\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mcheck_params)\n\u001b[0;32m    566\u001b[0m     out \u001b[38;5;241m=\u001b[39m X\n\u001b[0;32m    567\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m no_val_X \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m no_val_y:\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\utils\\validation.py:879\u001b[0m, in \u001b[0;36mcheck_array\u001b[1;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator, input_name)\u001b[0m\n\u001b[0;32m    877\u001b[0m         array \u001b[38;5;241m=\u001b[39m xp\u001b[38;5;241m.\u001b[39mastype(array, dtype, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m    878\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 879\u001b[0m         array \u001b[38;5;241m=\u001b[39m \u001b[43m_asarray_with_order\u001b[49m\u001b[43m(\u001b[49m\u001b[43marray\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43morder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mxp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mxp\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    880\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m ComplexWarning \u001b[38;5;28;01mas\u001b[39;00m complex_warning:\n\u001b[0;32m    881\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    882\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mComplex data not supported\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(array)\n\u001b[0;32m    883\u001b[0m     ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcomplex_warning\u001b[39;00m\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\utils\\_array_api.py:185\u001b[0m, in \u001b[0;36m_asarray_with_order\u001b[1;34m(array, dtype, order, copy, xp)\u001b[0m\n\u001b[0;32m    182\u001b[0m     xp, _ \u001b[38;5;241m=\u001b[39m get_namespace(array)\n\u001b[0;32m    183\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m xp\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnumpy\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnumpy.array_api\u001b[39m\u001b[38;5;124m\"\u001b[39m}:\n\u001b[0;32m    184\u001b[0m     \u001b[38;5;66;03m# Use NumPy API to support order\u001b[39;00m\n\u001b[1;32m--> 185\u001b[0m     array \u001b[38;5;241m=\u001b[39m \u001b[43mnumpy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43masarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43marray\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43morder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    186\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m xp\u001b[38;5;241m.\u001b[39masarray(array, copy\u001b[38;5;241m=\u001b[39mcopy)\n\u001b[0;32m    187\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\generic.py:2070\u001b[0m, in \u001b[0;36mNDFrame.__array__\u001b[1;34m(self, dtype)\u001b[0m\n\u001b[0;32m   2069\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__array__\u001b[39m(\u001b[38;5;28mself\u001b[39m, dtype: npt\u001b[38;5;241m.\u001b[39mDTypeLike \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m np\u001b[38;5;241m.\u001b[39mndarray:\n\u001b[1;32m-> 2070\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43masarray\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_values\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: 'tube'"
+     ]
+    }
+   ],
+   "source": [
+    "# Instantiate the imputer using the meadian (skewed features)\n",
+    "knnimputer = KNNImputer(n_neighbors=2, missing_values=np.nan)\n",
+    "\n",
+    "# Fit the imputer \n",
+    "knnimputer = knnimputer.fit(full_train_data[categorical_features])\n",
+    "\n",
+    "# Impute numerical features in train set\n",
+    "full_train_data[categorical_features] = knnimputer.transform(full_train_data[categorical_features])\n",
+    "\n",
+    "# Impute categorical features in test set\n",
+    "test_data[numerical_features] = knnimputer.transform(test_data[categorical_features])"
    ]
   },
   {
